--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-	font-family: "Germania";
-	src: url("GermaniaOne-Regular.ttf") format("truetype");
+	font-family: "Brandon";
+	src: url("../fonts/Brandon_reg.otf") format("opentype");
 }
 
 .dark-theme {
@@ -14,7 +14,7 @@
 }
 
 body {
-	font-family: Germania;
+	font-family: Brandon, sans-serif;
 	color: var(--text-color);
 	background-color: var(--body-background);
 	margin: 2%;
@@ -30,7 +30,6 @@ body {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	margin-top: -1%;
 	align-items: baseline;
 	margin-bottom: 2%;
 }
@@ -59,13 +58,6 @@ body {
 	color: var(--text-color);
 }
 
-/* toolcool-color-picker {
-	--tool-cool-color-picker-btn-bg: transparent;
-	--tool-cool-color-picker-btn-border-color-inner: transparent;
-	--tool-cool-color-picker-btn-border-color: var(--text-color);
-	content: "Custom";
-} */
-
 .container {
 	display: flex;
 	height: 100px;
@@ -76,16 +68,17 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.box:nth-child(1) {
-	width: 100px;
-	font-size: 1.5em;
-	align-items: flex-center;
-}
-
-.box:nth-child(n+2) {
 	flex-basis: 20%;
 	font-size: 1.2em;
 	align-items: flex-end;
+}
+
+h1 {
+	margin: 0
+}
+
+h2 {
+	width: 100px;
+	font-size: 1.5em;
+	align-items: flex-center;
 }
