--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,19 @@ h2 {
 	font-size: 1.5em;
 	align-items: flex-center;
 }
+
+.footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: baseline;
+	margin: 1% 0;
+}
+
+.footer-item {
+	margin: 0 100px;
+}
+
+a:-webkit-any-link {
+	color: var(--text-color);
+}
